# Lab04-TO

./: README.md
Ejercicio01/: main.cpp
Ejercicio02/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Proyecto01/: CMakeLists.txt
e2resuelto/: CMakeLists.txt  main.cpp
e4resuelto/: CMakeLists.txt  main.cpp
e5resuelto/: CMakeLists.txt  comunicacion.h  main.cpp
